[package]
name = "ft_bt_smart_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
btleplug = "0.11.5"
futures = "0.3.30"
rumqttc = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "=1.38", features = ["full"] }
